--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1393,6 +1393,9 @@ select {
 .cursor-pointer {
   cursor: pointer;
 }
+.resize {
+  resize: both;
+}
 .list-inside {
   list-style-position: inside;
 }
