--- a/public/css/app.css
+++ b/public/css/app.css
@@ -999,11 +999,11 @@ select {
 .m-10 {
   margin: 2.5rem;
 }
-.m-5 {
-  margin: 1.25rem;
-}
 .m-3 {
   margin: 0.75rem;
+}
+.m-5 {
+  margin: 1.25rem;
 }
 .mx-auto {
   margin-left: auto;
@@ -1029,13 +1029,13 @@ select {
   margin-top: 1.25rem;
   margin-bottom: 1.25rem;
 }
-.mx-1 {
-  margin-left: 0.25rem;
-  margin-right: 0.25rem;
-}
 .mx-2 {
   margin-left: 0.5rem;
   margin-right: 0.5rem;
+}
+.mx-1 {
+  margin-left: 0.25rem;
+  margin-right: 0.25rem;
 }
 .ml-3 {
   margin-left: 0.75rem;
@@ -1789,6 +1789,9 @@ select {
 .pb-20 {
   padding-bottom: 5rem;
 }
+.pb-16 {
+  padding-bottom: 4rem;
+}
 .pb-8 {
   padding-bottom: 2rem;
 }
@@ -1797,9 +1800,6 @@ select {
 }
 .pr-12 {
   padding-right: 3rem;
-}
-.pb-16 {
-  padding-bottom: 4rem;
 }
 .pt-8 {
   padding-top: 2rem;
@@ -1980,6 +1980,10 @@ select {
 .text-slate-400 {
   --tw-text-opacity: 1;
   color: rgb(148 163 184 / var(--tw-text-opacity));
+}
+.text-blue-900 {
+  --tw-text-opacity: 1;
+  color: rgb(30 58 138 / var(--tw-text-opacity));
 }
 .text-gray-200 {
   --tw-text-opacity: 1;
@@ -2398,13 +2402,13 @@ input[type=number]::-webkit-outer-spin-button {
   --tw-text-opacity: 1;
   color: rgb(0 0 0 / var(--tw-text-opacity));
 }
-.hover\:text-gray-600:hover {
-  --tw-text-opacity: 1;
-  color: rgb(75 85 99 / var(--tw-text-opacity));
-}
 .hover\:text-indigo-900:hover {
   --tw-text-opacity: 1;
   color: rgb(49 46 129 / var(--tw-text-opacity));
+}
+.hover\:text-gray-600:hover {
+  --tw-text-opacity: 1;
+  color: rgb(75 85 99 / var(--tw-text-opacity));
 }
 .hover\:text-indigo-500:hover {
   --tw-text-opacity: 1;
