--- a/public/css/app.css
+++ b/public/css/app.css
@@ -3027,6 +3027,10 @@ input[type=number]::-webkit-outer-spin-button {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 
+  .md\:grid-cols-1 {
+    grid-template-columns: repeat(1, minmax(0, 1fr));
+  }
+
   .md\:justify-center {
     justify-content: center;
   }
